@@ -76,7 +76,7 @@ void NMidiExport::writeDWord(unsigned int dw) {
 	putc(0xff & dw, midiout_);
 }
 
-void NMidiExport::writeString(char *s) {
+void NMidiExport::writeString(const char *s) {
 	while (*s) {
 		putc(0xff & (*s++), midiout_);
 	}
@@ -133,7 +133,7 @@ void NMidiExport::writeCtlChange(int time, unsigned char chn, unsigned char ctl,
 	writeByte(pgm);
 }
 
-void NMidiExport::exportMidi(const char *fname, QPtrList<NVoice> *voilist, char *miditext) {
+void NMidiExport::exportMidi(const char *fname, QPtrList<NVoice> *voilist, const char *miditext) {
 	NVoice *voice_elem;
 	NTimeSig *timesig;
 #if GCC_MAJ_VERS > 2
@@ -165,7 +165,7 @@ void NMidiExport::exportMidi(const char *fname, QPtrList<NVoice> *voilist, char 
 	writeCtrlTrack(voilist, "Music generated by \"NoteEdit\"", miditext, timesig, 0/* , 60000000 / tempo*/);
 
 	for (voice_elem = voilist->first(); voice_elem; voice_elem = voilist->next()) {
-		writeTrack(voice_elem, timesig);
+		writeTrack(voice_elem);
 	}
 	fclose(midiout_);
 }
@@ -224,7 +224,7 @@ void NMidiExport::writeTempo(int time, unsigned int tempo) {
 }
 
 
-void NMidiExport::writeCtrlTrack(QPtrList<NVoice> *voilist, char *Title, char *miditext, NTimeSig *firstTsig, int keysig) {
+void NMidiExport::writeCtrlTrack(QPtrList<NVoice> *voilist, const char *Title, const char *miditext, NTimeSig *firstTsig, int keysig) {
 	long pos0, pos1;
 	unsigned int length;
 	int lastEventTime = 0;
@@ -262,13 +262,13 @@ void NMidiExport::writeCtrlTrack(QPtrList<NVoice> *voilist, char *Title, char *m
 	fseek(midiout_, pos1, SEEK_SET);
 }
 
-void NMidiExport::writeTrack(NVoice *voice, NTimeSig *firstTsig) {
+void NMidiExport::writeTrack(NVoice *voice) {
 	long pos0, pos1;
 	int lyricsLines;
 	unsigned int length;
 	int i;
 	NNote *note;
-	NVoice *firstVoice;
+	NVoice *firstVoice = 0;
 	NMidiEventStr *m_evt, *m_evt2, *m_events;
 	int myTime, lastEventTime = 0, noteoff;
 	int sign = 0;
