@@ -109,3 +109,4 @@ version 2.9.0:
 	* R390 -- FIXED: Export LilyPond alternative repeat markings correctly.
 	* R392 -- FIXED: Placed Clef and/or KeySig is now properly interpreted in non-first voices when the rhythm is different than in the first voice. Playback is still messed up. Removed some debugging stuff.
 	* R399 -- FIXED: Key shortcuts not working anymore on KDE3.5. Thanks to Adam.
+	* R400 -- FIXED: Compiler warnings for chord.cpp/h, chorddiagram.cpp/h, clef.cpp, midiexport.cpp/h, musixtex.cpp and musicxmlcommon.cpp/h.
